recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: type mismatch;
 found   : Int
 required: List[Int]
	if(l.tail == Nil) return l.head
                                   ^